use, for example, wx.EVT_BUTTON.typeId instead of
wx.wxEVT_COMMAND_BUTTON_CLICKED.   Note that there are a few composite
events, such as EVT_MOUSE and EVT_SCROLL, that will actually bind
multiple event types at once, and in these cases the typeId property
may not give you what you want.  You should use te component events in
these cases.





2.8.1.0
-------
* 8-Jan-2006

Added EVT_TASKBAR_CLICK and use it to show taskbar icon menu on right
button release, not press, under MSW (bug 1623761)

Added wxTreeCtrl::CollapseAll[Children]() and IsEmpty() methods;
documented wxTreeItemId (patch 1622125)

Fix wxMDIChidFrame::GetPosition() (patch 1626610)

Fix attribute memory leak in wxGrid::ShowCellEditControl() (patch
1629949)

wxGTK: Fix for controls on a toolbar being the full height of the
toolbar instead of their natural height.

wx.lib.customtreectrl patches from Andrea Gavana.

wxMac: Applied patch #1622389, fixing two memory leaks in
GetPartialTextExtents.

More fixes for the native wx.ListCtrl on Mac.

Added wx.aui.AuiNotebook.GetAuiManager().

Added wx.aui.AuiMDIParentFrame and wx.aui.AuiMDIChildFrame, which
essentially implement the MDI interface using a normal wx.Frame and a
wx.aui.AuiNotebook.  




2.8.0.1
-------
* 11-Dec-2006

Lots of fixes and updates to the AUI classes.

Added wx.CollapsiblePane.  On wxGTK it uses a native expander widget,
on the other platforms a regular button is used to control the
collapsed/expanded state.

Added the wx.combo module, which contains the ComboCtrl and ComboPopup
classes.  These classes allow you to implement a wx.ComboBox-like
widget where the popup can be nearly any kind of widget, and where you
have a lot of control over other aspects of the combo widget as well.
It works very well on GTK and MSW, using native renderers for drawing
the combo button, but is unfortunatly still a bit klunky on OSX...

Use system default paper size for printing instead of A4 by default.
